# upi-behaviour-mystery

./: .gitignore  CONTRIBUTING.md  LICENSE  METHODOLOGY.md  Makefile  README.md  app.py  pyproject.toml  requirements.txt  setup.sh
config/: config.yaml
sql/: README.md  cohort_queries.sql
src/: config.py  pipeline.py
src/analysis/: cohorts.py  experiment_design.py  fairness.py  strategy.py
src/data/: csv_loader.py  schema.py  simulator.py
src/features/: engineer.py
src/models/: churn.py  explainability.py  statistical_tests.py  uplift.py
src/utils/: logging.py
tests/: test_csv_loader.py  test_experiment_design.py  test_explainability.py  test_fairness.py  test_models.py  test_simulator.py  test_statistical_tests.py
